Deprecated the skeleton v1/tasks call - won't implement this way
